# quickIME

./: AI_MODULE_SUMMARY.txt  CLAUDE.md  CMakeLists.txt  CUSTOMER_SERVICE.md  KNOWLEDGE_MODULE.md  KNOWLEDGE_MODULE_COMPLETED.md  KNOWLEDGE_QUICKREF.md  KNOWLEDGE_VERIFICATION.md  Module3_Completion_Summary.md  Module3_Final_Status.txt  README.md  SUMMARY.md  day1_test_report.md  integration_test_plan.md  verify_env.bat
config_panel/: config_window.cpp  config_window.h  main.cpp  resource.h
docs/: AI_MODULE_BUILD.md  AI_MODULE_COMPLETION.md  BUILD_AND_TEST.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_REQUIREMENTS.md  DEVELOPMENT_COMPLETE.md  ENVIRONMENT_SETUP.md  FINAL_REPORT.md  Hotkey_Module.md  INSTALLATION.md  Module5_AI_Inference.md  PROJECT_STATUS.md
include/quickinput/ai/: inference_engine.h  llama_context.h  model_loader.h  prompt_templates.h
include/quickinput/core/: common.h  config_types.h  context_manager.h  hotkey_manager.h  input_monitor.h  utils.h  wubi_engine.h  wubi_table.h  wubi_types.h
include/quickinput/cs/: cs_manager.h
include/quickinput/ime/: composition.h  key_handler.h  register.h  text_service.h
include/quickinput/knowledge/: embedding.h  knowledge_base.h  text_chunker.h  vector_index.h
include/quickinput/ui/: candidate_manager.h  candidate_window.h  style_config.h
installer/: CMakeLists.txt  README.md  build_installer.cmake  build_report_template.txt.in  register_ime.bat  setup.iss  unregister_ime.bat  validate_installer.cmake  version_info.txt.in
portable/: portable_version.bat
resources/: config.rc  ime.rc  resource.h
src/: dllmain.cpp
src/ai/: inference_engine.cpp  llama_context.cpp  model_loader.cpp  prompt_templates.cpp  test_ai.cpp
src/core/: common.cpp  config_types.cpp  context_manager.cpp  hotkey_manager.cpp  input_monitor.cpp  test_context.cpp  test_hotkey.cpp  utils.cpp  wubi_engine.cpp  wubi_types.cpp
src/cs/: cs_manager.cpp
src/ime/: composition.cpp  key_handler.cpp  register.cpp  text_service.cpp
src/knowledge/: embedding.cpp  knowledge_base.cpp  test_kb.cpp  text_chunker.cpp  vector_index.cpp
src/ui/: candidate_manager.cpp  candidate_window.cpp  style_config.cpp  test_candidate.cpp
